tests/mstr/compile-fail/undefined-local.mstr
(module 'tests 'compile-fail 'undefined-local)

(state (start)
  (steps
    (let seen 1)
    (transition end
      missing-local)))
